--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-6">
             <div class="header-content ">
                 <div class="header-logo">
-                    <a href="index.html"> <img class=" rounded-full ring ring-[#051744]" src="image/logo.jpg"></a>
+                    <a href="index.html"> <img class=" rounded-full" src="image/logo.jpg"></a>
 
                 </div>
                 <div class=" sourcing-text font-bold text-[#051744] text-lg">
