--- a/woven-kids.html
+++ b/woven-kids.html
@@ -217,19 +217,19 @@
         <h1 class="text-center text-3xl font-semibold mb-8">Woven Kids All Products</h1>
         <div class="flex justify-center gap-4">
             <div class="w-1/4 p-4 bg-white shadow-lg">
-                <img src="image/All Products/woven/kids1.jpg" alt="Placeholder image of a grey t-shirt with a 'New Orleans Football' print" class="mb-4">
+                <a href="#"><img src="image/All Products/woven/kids1.jpg" alt="Placeholder image of a grey t-shirt with a 'New Orleans Football' print" class="mb-4"></a>
                 <h2 class="text-center text-lg">Kids 001</h2>
             </div>
             <div class="w-1/4 p-4 bg-white shadow-lg">
-                <img src="image/All Products/woven/kids2.jpg" alt="Placeholder image of a green t-shirt with a 'Turn in Your Guns' print" class="mb-4">
+                <a href="#"><img src="image/All Products/woven/kids2.jpg" alt="Placeholder image of a green t-shirt with a 'Turn in Your Guns' print" class="mb-4"></a>
                 <h2 class="text-center text-lg">Kids 002</h2>
             </div>
             <div class="w-1/4 p-4 bg-white shadow-lg">
-                <img src="image/All Products/woven/kids3.jpg" alt="Placeholder image of a grey long sleeve shirt" class="mb-4">
+               <a href="#"> <img src="image/All Products/woven/kids3.jpg" alt="Placeholder image of a grey long sleeve shirt" class="mb-4"></a>
                 <h2 class="text-center text-lg">Kids 003</h2>
             </div>
             <div class="w-1/4 p-4 bg-white shadow-lg">
-                <img src="image/All Products/woven/kids4.jpg" alt="Placeholder image of a black t-shirt with a motorcycle print" class="mb-4">
+               <a href="#"> <img src="image/All Products/woven/kids4.jpg" alt="Placeholder image of a black t-shirt with a motorcycle print" class="mb-4"></a>
                 <h2 class="text-center text-lg">Kids 004</h2>
             </div>
         </div>
