--- a/knit-man.html
+++ b/knit-man.html
@@ -217,21 +217,21 @@
             <h1 class="text-center text-3xl font-semibold mb-8">Knit Men All Products</h1>
             <div class="flex justify-center gap-4">
                 <div class="w-1/4 p-4 bg-white shadow-lg">
-                    <a href="knit-men-views.html"><img src="image/All Products/men1.jpg" alt="Placeholder image of a grey t-shirt with a 'New Orleans Football' print" class="mb-4"></a>
+                    <a href="knit-men-views.html"><img src="image/knit all produts/2.jpg" alt="Placeholder image of a grey t-shirt with a 'New Orleans Football' print" class="mb-4"></a>
                     <h2 class="text-center text-lg">Mens 001</h2>
                 </div>
                 <div class="w-1/4 p-4 bg-white shadow-lg">
-                    <a href="knit-men-views.html"><img src="image/All Products/men2.jpg"
+                    <a href="knit-strikar.html"><img src="image/knit all produts/3.jpg"
                         alt="Placeholder image of a green t-shirt with a 'Turn in Your Guns' print" class="mb-4"></a>
                     <h2 class="text-center text-lg">Mens 002</h2>
                 </div>
                 <div class="w-1/4 p-4 bg-white shadow-lg">
-                    <a href="knit-men-views.html"><img src="image/All Products/men3 .jpg" alt="Placeholder image of a grey long sleeve shirt"
+                    <a href="knit-full.html"><img src="image/knit all produts/4.jpg" alt="Placeholder image of a grey long sleeve shirt"
                         class="mb-4"></a>
                     <h2 class="text-center text-lg">Mens 003</h2>
                 </div>
                 <div class="w-1/4 p-4 bg-white shadow-lg">
-                    <a href="knit-men-views.html"><img src="image/All Products/men4.jpg"
+                    <a href="knit-bike.html"><img src="image/knit all produts/5.jpg"
                         alt="Placeholder image of a black t-shirt with a motorcycle print" class="mb-4"></a>
                     <h2 class="text-center text-lg">Mens 004</h2>
                 </div>
