--- a/knit-products.html
+++ b/knit-products.html
@@ -320,11 +320,11 @@
             </div>
             <div class="w-full sm:w-1/2 md:w-1/4 lg:w-1/4 px-4 mb-4">
                 <div class="bg-white rounded-lg overflow-hidden shadow-md">
-                    <a href="knit-men-views.html"><img src="image/knit all produts/10.jpg" alt="Placeholder" class="w-full"></a>
+                    <a href="knit-kids-views.html"><img src="image/knit all produts/10.jpg" alt="Placeholder" class="w-full"></a>
                     <div class="p-4">
                         <h3 class="text-xl font-semibold text-gray-800 mb-2 text-center">Mens 003</h3>
                         
-                        <a href="knit-men-views.html"><button class="bg-gray-500 hover:bg-gray-700 text-white font-bold py-2 px-4 rounded mt-4 w-full">View Details</button></a>
+                        <a href="knit-kids-views.html"><button class="bg-gray-500 hover:bg-gray-700 text-white font-bold py-2 px-4 rounded mt-4 w-full">View Details</button></a>
                     </div>
                 </div>
             </div>
