--- a/woven-women.html
+++ b/woven-women.html
@@ -221,15 +221,15 @@
                 <h2 class="text-center text-lg">Womens 001</h2>
             </div>
             <div class="w-1/4 p-4 bg-white shadow-lg">
-                <a href="woven-women-views.html"><img src="image/All Products/woven/women2.jpg" alt="Placeholder image of a green t-shirt with a 'Turn in Your Guns' print" class="mb-4"></a>
+                <a href="woven-deep-sky.html"><img src="image/All Products/woven/women2.jpg" alt="Placeholder image of a green t-shirt with a 'Turn in Your Guns' print" class="mb-4"></a>
                 <h2 class="text-center text-lg">Womens 002</h2>
             </div>
             <div class="w-1/4 p-4 bg-white shadow-lg">
-                <a href="woven-women-views.html"><img src="image/All Products/woven/women3.jpg" alt="Placeholder image of a grey long sleeve shirt" class="mb-4"></a>
+                <a href="woven-s-pink.html"><img src="image/All Products/woven/women3.jpg" alt="Placeholder image of a grey long sleeve shirt" class="mb-4"></a>
                 <h2 class="text-center text-lg">Womens 003</h2>
             </div>
             <div class="w-1/4 p-4 bg-white shadow-lg">
-                <a href="woven-women-views.html"><img src="image/All Products/woven/women4.jpg" alt="Placeholder image of a black t-shirt with a motorcycle print" class="mb-4"></a>
+                <a href="woven-sky.html"><img src="image/All Products/woven/women4.jpg" alt="Placeholder image of a black t-shirt with a motorcycle print" class="mb-4"></a>
                 <h2 class="text-center text-lg">Womens 004</h2>
             </div>
         </div>
