--- a/woven-men-views.html
+++ b/woven-men-views.html
@@ -242,11 +242,11 @@
                             </div>
                             <div class="w-full sm:w-1/2 md:w-1/4 lg:w-1/4 px-4 mb-4">
                                 <div class="bg-white rounded-lg overflow-hidden shadow-md">
-                                    <a href="#"><img src="image/All Products/woven/men3.jpg" alt="Placeholder" class="w-full">
+                                    <a href="woven-blue.html"><img src="image/All Products/woven/men3.jpg" alt="Placeholder" class="w-full">
                                         <div class="p-4"></a>
                                         <h3 class="text-xl font-semibold text-gray-800 mb-2 text-center">Men  002</h3>
                                         
-                                        <a href="#"><button class="bg-gray-500 hover:bg-gray-700 text-white font-bold py-2 px-4 rounded mt-4 w-full">View Details</button></a>
+                                        <a href="woven-blue.html"><button class="bg-gray-500 hover:bg-gray-700 text-white font-bold py-2 px-4 rounded mt-4 w-full">View Details</button></a>
                                     </div>
                                 </div>
                             </div>
