--- a/cap.html
+++ b/cap.html
@@ -240,21 +240,21 @@
             </div>
             <div class="w-full sm:w-1/2 md:w-1/4 lg:w-1/4 px-4 mb-4">
                 <div class="bg-white rounded-lg overflow-hidden shadow-md">
-                    <a href="view-caps.html"><img src="image/cap/3.jpg" alt="Placeholder" class="w-full">
+                    <a href="cap-black.html"><img src="image/cap/3.jpg" alt="Placeholder" class="w-full">
                         <div class="p-4"></a>
                         <h3 class="text-xl font-semibold text-gray-800 mb-2 text-center">Heat Wear Cap 002</h3>
                         
-                        <a href="view-caps.html"><button class="bg-gray-500 hover:bg-gray-700 text-white font-bold py-2 px-4 rounded mt-4 w-full">View Details</button></a>
+                        <a href="cap-black.html"><button class="bg-gray-500 hover:bg-gray-700 text-white font-bold py-2 px-4 rounded mt-4 w-full">View Details</button></a>
                     </div>
                 </div>
             </div>
             <div class="w-full sm:w-1/2 md:w-1/4 lg:w-1/4 px-4 mb-4">
                 <div class="bg-white rounded-lg overflow-hidden shadow-md">
-                    <a href="view-caps.html"><img src="image/cap/4.jpg" alt="Placeholder" class="w-full">
+                    <a href="cap-white.html"><img src="image/cap/4.jpg" alt="Placeholder" class="w-full">
                         <div class="p-4"></a>
                         <h3 class="text-xl font-semibold text-gray-800 mb-2 text-center">Heat Wear Cap 003</h3>
                         
-                        <a href="view-caps.html"><button class="bg-gray-500 hover:bg-gray-700 text-white font-bold py-2 px-4 rounded mt-4 w-full">View Details</button></a>
+                        <a href="cap-white.html"><button class="bg-gray-500 hover:bg-gray-700 text-white font-bold py-2 px-4 rounded mt-4 w-full">View Details</button></a>
                     </div>
                 </div>
             </div>
